@@ -328,15 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Team B\n",
-      "Moving 'Nice Albatross' (Team B) from 'R' to '09' in ping_pong.\n"
+      "Team A\n",
+      "Moving 'Lovely Heron' (Team A) from '3' to '' in beer_pong.\n"
      ]
     }
    ],
@@ -369,7 +369,7 @@
     "\n",
     "# hf.get_players().set_index(\"nickname\").loc[\"Qualified Buffalo\"]\n",
     "# set_player_subteam(\"Rewarding Ermine\", \"capture_the_flag\", \"\")\n",
-    "set_player_subteam(\"Nice Albatross\", \"ping_pong\", \"09\")\n",
+    "set_player_subteam(\"Lovely Heron\", \"beer_pong\", \"\")\n",
     "\n",
     "\n",
     "# hf.get_players().set_index(\"nickname\").loc[\"Wide Lionfish\"]\n"
