@@ -83,7 +83,7 @@ ping_pong,B: Radiant Booby,C: Qualified Buffalo,1,Tuesday,17:45,,,2024-04-30 17:
 ping_pong,B: Tan Crane,C: Well-documented Dodo,1,Friday,17:00,,,2024-05-03 17:00:00,1800,B: 09,C: 10,ping_pongB: 09C: 10
 ping_pong,C: Gargantuan Okapi,A: Motherly Woodpecker,1,Tuesday,18:45,Tie (sick),AC,2024-04-30 18:45:00,1800,C: 02,A: 14,ping_pongC: 02A: 14
 ping_pong,B: Real Mouse,C: Clever Wombat,1,Tuesday,19:45,0:3,C,2024-04-30 19:45:00,1800,B: 01,C: 13,ping_pongB: 01C: 13
-ping_pong,A: Trifling Tarpon,B: Tan Crane,1,Friday,13:30,,,2024-05-03 13:00:00,1800,A: 08,B: 09,ping_pongA: 08B: 09
+ping_pong,A: Trifling Tarpon,B: Tan Crane,1,Friday,13:30,,,2024-05-03 13:30:00,1800,A: 08,B: 09,ping_pongA: 08B: 09
 ping_pong,B: Gripping Penguin,C: Neglected Harrier,1,Friday,14:00,,,2024-05-03 14:00:00,1800,B: 16,C: 08,ping_pongB: 16C: 08
 ping_pong,C: Clever Wombat,A: Pricey Collie,1,Tuesday,20:15,1:3,A,2024-04-30 20:15:00,1800,C: 13,A: 09,ping_pongC: 13A: 09
 ping_pong,A: Dishonest Fangtooth,B: Real Mouse,3,Tuesday,20:15,,,2024-04-30 20:15:00,1800,A: 13,B: 01,ping_pongA: 13B: 01
@@ -102,7 +102,7 @@ ping_pong,B: Ill-fated Meerkat,C: Kindly Clownfish,1,Friday,17:45,,,2024-05-03 1
 ping_pong,B: Extra-small Coyote,C: Vivacious Axolotl,2,Friday,17:30,,,2024-05-03 17:30:00,1800,B: 10,C: 12,ping_pongB: 10C: 12
 ping_pong,C: Damp Fossa,A: Revolving Coelacanth,3,Friday,17:30,,,2024-05-03 17:30:00,1800,C: 11,A: 03,ping_pongC: 11A: 03
 ping_pong,A: Pricey Collie,B: Frightening Avocet,1,Friday,18:15,,,2024-05-03 18:15:00,1800,A: 09,B: 15,ping_pongA: 09B: 15
-ping_pong,A: Limp Monkey,B: Extra-small Coyote,2,Friday,18:15,,,2024-05-03 18:15:00,1800,A: 19,B: 10,ping_pongA: 19B: 10
+ping_pong,A: Limp Monkey,B: Extra-small Coyote,1,Friday,12:15,3:0,A,2024-05-03 12:15:00,1800,A: 19,B: 10,ping_pongA: 19B: 10
 ping_pong,C: Red Eel,A: Horrible Lobster,3,Friday,18:15,,,2024-05-03 18:15:00,1800,C: 15,A: 04,ping_pongC: 15A: 04
 ping_pong,A: Revolving Coelacanth,B: Noted Hippopotamus,1,Friday,18:45,,,2024-05-03 18:45:00,1800,A: 03,B: 12,ping_pongA: 03B: 12
 ping_pong,B: Striped Himalayan,C: Reflecting Pug,3,Friday,19:15,,,2024-05-03 19:15:00,1800,B: 08,C: 09,ping_pongB: 08C: 09
