@@ -5,7 +5,7 @@ Cool Weasel,USM,False,True,True,False,True,False,False,False,False,True,True,Tru
 Motherly Woodpecker,MPE,False,True,True,True,True,False,False,True,True,False,False,False,False,True,True,True,True,True,True,True,True,False,False,False,False,True,True,6,0,False,Team A,,R,,,R,2,,R,,,14,1,0.1666666666666666,True
 Nutty Sheep,MPE,False,True,False,True,True,False,False,True,True,True,True,False,False,False,False,False,False,True,True,True,True,False,False,False,False,True,True,5,0,False,Team A,,R,,,,,1,R,,,16,2,0.4,True
 Dishonest Fangtooth,MPA,False,False,True,True,True,True,False,False,False,False,False,False,False,True,True,False,False,False,False,True,True,True,True,True,True,True,True,5,1,False,Team A,R,,,,1,,,1,R,3,13,4,0.8,True
-Lovely Heron,MPE,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,True,True,True,True,True,True,True,True,True,True,5,0,True,Team A,,,,,,,R,1,3,R,01,3,0.6,True
+Lovely Heron,MPE,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,True,True,True,True,True,True,True,True,True,True,5,0,True,Team A,,,,,,,R,1,,R,01,3,0.6,True
 Ideal Vaquita,IPP,False,True,False,True,True,True,True,True,True,False,False,False,False,False,False,False,False,True,True,True,True,False,False,False,False,False,False,4,0,False,Team A,R,1,,,,,R,2,,,,2,0.5,False
 Trifling Tarpon,IPP,False,True,True,True,True,False,False,False,False,True,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,True,True,4,0,False,Team A,,,2,1,1,,,,,,08,4,1.0,True
 Dramatic Hyena,USM,True,True,True,True,True,False,False,True,True,True,True,False,False,True,True,False,False,True,True,False,False,False,False,False,False,False,False,4,0,False,Team A,,1,R,,1,,1,,,,,3,0.75,True
